<resources>
    <string name="app_name">Finder Feast</string>
    <string name="title_near_me">Near Me</string>
    <string name="title_profile">Profile</string>
    <string name="title_recommendations">Recommendations</string>
    <string name="password">Password</string>
    <string name="lastName">Last Name</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="categories">Categories</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="sign_out">Sign Out</string>
    <string name="show_password">Show Password</string>
    <string name="favorites_list">Favorites List</string>
    <string name="log_out">Log out</string>
    <string name="go_to_website">Go To Website</string>
    <string name="favorite">Add To Favorites</string>
</resources>
